# TransPlay

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml
docs/最初的 sequence-diagram，不保证时效性/: router.mmd  从头翻译新的mod.mmd  更新现有mod的翻译.mmd  最终整理.mmd
src/transplay_mcp/: __init__.py  server.py
src/transplay_mcp/core/: __init__.py  formatter.py  git_manager.py  logger.py
tests/: test_formatter.py  test_git_manager.py  test_server.py
transplay-localization/: SKILL.md
