[project]
name = "transplay-mcp"
version = "0.1.0"
description = "Mod localization support MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mcp[cli]>=0.1.0", "pydantic>=2.0.0"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pyright>=1.1.0", "ruff>=0.3.0"]

[project.scripts]
transplay-mcp = "transplay_mcp.server:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
reportMissingImports = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
